--- a/styles/small-ones.css
+++ b/styles/small-ones.css
@@ -33,6 +33,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-right: 50px;
 }
 
 .profile-container h1 {
@@ -45,14 +46,22 @@ body {
 /* navigation ----------------------------------*/
 nav {
     background-color: var(--third-color);
-    padding: 10px;
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.5s ease-out;
 }
 
 nav ul {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+    overflow: hidden;
+}
+
+nav.active {
+    grid-template-rows: 1fr;
+}
+
+nav li {
     list-style: none;
+    padding: 10px;
 }
 
 nav a {
@@ -67,24 +76,23 @@ nav a:hover {
 
 /*hamburguer button----------------------------------*/
 
-.menu-toggle {
+#menu-toggle {
+    
     color: var(--secondary-color);
     font-size: 25px;
     cursor: pointer;
     border: none;
+    margin-left: 50px;
 
 }
 
-nav ul {
-    display: none;
-    /* hide menu */
+#menu-toggle::before {
+    content: "\2630";
+
 }
 
-nav ul.active {
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    /* Show menu when "active" class is added*/
+#menu-toggle.open::before {
+    content: "X";
 }
 
 
