--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -36,7 +36,7 @@ footer {
 }
 
 /*navigation =================*/
-#hamButton{
+#hamButton {
     display: none;
 }
 
@@ -488,8 +488,8 @@ dialog button:hover {
 /*VOCE PRECISA CRIAR SMALL, MEDIUM E LARGE VIEW PARA CADA UM DOS CARDS
 E USAR O GRID AREA*/
 @media screen and (min-width: 1025px) {
-    
-    
+
+
     .places-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -507,27 +507,33 @@ E USAR O GRID AREA*/
         border-radius: 10px;
     }
 
-    
+
 
 }
 
 .btn-learnM {
-        max-width: 100%;
-        width: 100%;
-        padding: 10px;
-        font-size: 18px;
-        border: none;
-        border-radius: 20px;
-        background-color: var(--primary-color);
-        color: var(--secondary-color);
-        margin-top: 20px;
-    }
+    max-width: 100%;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 20px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    margin-top: 20px;
+}
 
-.side-bar{
+.btn-learnM:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.side-bar {
     margin: 15px;
     color: var(--primary-color);
     font-size: 30px;
-   
+
 }
 
 
