footer, last modf

--- a/final-project/styles/main-mobile.css
+++ b/final-project/styles/main-mobile.css
@@ -52,4 +52,12 @@
     padding: 1rem;
   }
 
+
+ footer {
+  background-color: var(--secondary-color);
+  color: #fff;
+  display: grid;
+  font-size: 14px;
+  justify-content: center;
+}
 }
