--- a/final-project/styles/main.css
+++ b/final-project/styles/main.css
@@ -26,7 +26,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrp;
+  flex-wrap: wrap;
   /* garante responsividade */
   max-width: 1200px;
   margin: 0 auto;
@@ -264,8 +264,39 @@ label {
 
 /*FOOTER ===========================*/
 footer {
-  text-align: center;
-  padding: 10px;
-  background: #00296b80;
-  color: var(--third);
+  color: #fff;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+.footer-left,
+.footer-right {
+  flex: 1 1 250px;
+  margin: 10px;
+  
+}
+
+.footer-icons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  flex: 1 1 100px;
+  margin: 10px;
+}
+
+.footer-icons img {
+  width: 32px;
+  height: 32px;
+  filter: brightness(0) invert(1); /* deixa o ícone branco */
+  transition: transform 0.3s ease;
+}
+
+.footer-icons img:hover {
+  transform: scale(1.2);
 }
